objects/Master_Data_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Master_Data_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Back_end_System__c</fullName>
        <label>Back-End System</label>
        <picklist>
            <picklistValues>
                <fullName>P08 (Global Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P02 (Drives - Factory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P16 (Drives - NAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldmine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kompas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel (Drives - Vacon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbocor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Danfoss_Segment__c</fullName>
        <label>Danfoss Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Text($User.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Segment (Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goldmine__c</fullName>
        <label>Goldmine #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kompas__c</fullName>
        <label>Kompas #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Data_Type__c</fullName>
        <label>Master Data Type</label>
        <picklist>
            <controllingField>Back_end_System__c</controllingField>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Prospect</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P02__c</fullName>
        <label>P02 #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P16__c</fullName>
        <label>P16 #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCM__c</fullName>
        <label>PCM #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <inlineHelpText>SAP number created for this request</inlineHelpText>
        <label>P08 #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel__c</fullName>
        <label>Siebel #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turbocor__c</fullName>
        <label>Turbocor #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>Customer_Request_Completed_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;), 
OR(
AND(Left(Text(Back_end_System__c),3)=&quot;P08&quot;,ISBLANK(SAP__c)),
AND(Left(Text(Back_end_System__c),3)=&quot;P02&quot;,ISBLANK(P02__c)),
AND(Left(Text(Back_end_System__c),3)=&quot;P16&quot;,ISBLANK(P16__c)),
AND(Left(Text(Back_end_System__c),6)=&quot;Siebel&quot;,ISBLANK(Siebel__c)),
AND(Left(Text(Back_end_System__c),7)=&quot;Turbocor&quot;, ISBLANK(Turbocor__c )),
AND(Left(Text(Back_end_System__c),8)=&quot;Goldmine&quot;,ISBLANK(Goldmine__c)),
AND(Left(Text(Back_end_System__c),6)=&quot;Kompas&quot;,ISBLANK(Kompas__c)),
AND(Left(Text(Back_end_System__c),3)=&quot;PCM&quot;,ISBLANK(PCM__c))
))</errorConditionFormula>
        <errorMessage>You must enter an ID for the back-end system selected.</errorMessage>
    </validationRules>
</CustomObject>